# dormir

./: .gitignore  COMPLETE_STATUS.md  DEPLOYMENT.md  FINAL_ENHANCEMENTS_STATUS.md  MIGRATION_COMPLETE.md  NAVIGATION_FIX_COMPLETE.md  PAYMENTS_PAGE_GUIDE.md  QUICK_REFERENCE.md  READY_TO_USE.md  RESTORATION_COMPLETE.md  RESTORATION_SUMMARY.md  ROOMS_PAGE_RESTORED.md  ROOM_DATA_INFO.md  SESSION_SUMMARY.md  STUDENTS_PAGE_RESTORED.md  TASK_4_COMPLETE.md  TASK_4_SUCCESS.txt  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROOM_DATA_INFO.md  database.py  main.py  models_allocation.py  models_booking.py  models_campus.py  models_fee.py  models_maintenance.py  models_payment.py  models_period.py  models_room.py  models_student.py  pyproject.toml  requirements.txt  seed.py  seed_dormir.py  seed_main_campus_rooms.py  seed_maintenance.py  seed_students.py  services_hostel.py  test_maintenance.py
backend/routers/: allocations.py  beds.py  booking.py  campuses.py  dashboard.py  fees.py  maintenance.py  payments.py  periods.py  reports.py  rooms.py  semester.py  students.py
backend/src/app/: database.py  main.py  models.py  models_lease.py  models_maintenance.py  models_payment.py  models_tenant.py  seed_leases.py  seed_payments.py  seed_tenants.py
backend/src/app/routers/: dashboard.py  leases.py  maintenance.py  payments.py  tenants.py  units.py
backend/tests/: TEST_COVERAGE.md  __init__.py  conftest.py  test_dashboard.py  test_maintenance.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  (+3 more)
(+30 files in other folders)
